--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8085
 
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=root
+spring.data.mongodb.password=root
+spring.data.mongodb.database=dauth
+spring.data.mongodb.authentication-database=admin
